Completed prototyp 2 task

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Web.config
 .vs/config/applicationhost.config
 SC-IT-utbildning-05.sln
 SC-IT-utbildning-05.proj.DotSettings.user
+WE-Markdown.css
+WE-Palette.css
+WebEssentials2015-Settings.json
